- 
    Bug 
- 
    Resolution: Done
- 
    P3: Somewhat important 
- 
    Qt Creator 4.9.0-beta1
- 
    macOS High Sierra Version 10.13.6
 QNX Apps and Media 1.1
- 
        
- 
        8662d0a9c036f5ca8128f048421bd9be6249a1b8 (qt-creator/qt-creator/master)
The device tests should indicate that SFTP will be used instead (if that's available) when the rsync test fails.
1) Setup a QNX Apps and Media 1.1 image on an ARM device. QNX does not have rsync.
2) Build master branch Qt Creator and run it.
3) Qt Creator|Preferences|Devices|QNX|Add...|QNX Device
4) Enter the IP address of the device.
5) Enter root for the username.
6) Select "Continue".
7) Select "Done".
8) Select "Close". The device test won't work because password access doesn't work without ssh-askpass. macOS doesn't have this.
9) Change "Authentication type" to "Specific key".
10) Select "Create New...".
11) Use ssh-copy-id to copy the generated key to the image (e.g., ssh-copy-id -i ~/.ssh/qtc_id.pub root@10.122.34.95).
12) Select SSH (from the Devices page list).
13) Uncheck "Enable connection sharing". Connection sharing does (did) not work on macOS. 
14) Select "Devices".
15) Select "Test".
Checking whether rsync works...
rsync failed with exit code 12: sh: rsync: cannot execute - No such file or directory
rsync: connection unexpectedly closed (0 bytes received so far) [receiver]
rsync error: error in rsync protocol data stream (code 12) at /BuildRoot/Library/Caches/com.apple.xbs/Sources/rsync/rsync-52/rsync/io.c(453) [receiver=2.6.9]
There's no indication that this failure is acceptable.