RemoteLinux: Make it clear that rsync is not strictly needed

... by adding some soothing output to the device tester.

Fixes: QTCREATORBUG-21749
Change-Id: I6d2125d50716192a7fcd09f41269a32b41ad9be6
Reviewed-by: James McDonnell <jmcdonnell@blackberry.com>